--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,9 +1,9 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 537140 2020-05-31 09:24:20Z jbeich $
+# $FreeBSD: head/mail/thunderbird/Makefile 537917 2020-06-04 18:08:00Z tobik $
 
 PORTNAME=	thunderbird
-DISTVERSION=	68.8.1
-PORTREVISION=	3
+DISTVERSION=	68.9.0
+PORTREVISION=	2
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
 		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
