--- a/www/node12/Makefile
+++ b/www/node12/Makefile
@@ -1,9 +1,9 @@
-# $FreeBSD: head/www/node12/Makefile 534197 2020-05-06 18:09:41Z emaste $
+# $FreeBSD: head/www/node12/Makefile 538485 2020-06-11 13:52:43Z bhughes $
 
 PORTNAME=	node
-PORTVERSION=	12.16.2
+PORTVERSION=	12.17.0
 DISTVERSIONPREFIX=	v
-PORTREVISION=	2
+PORTREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	http://nodejs.org/dist/v${PORTVERSION}/
 PKGNAMESUFFIX=	12
@@ -40,7 +40,7 @@ BUNDLED_SSL_CONFIGURE_OFF=	--shared-openssl --openssl-use-def-ca-store
 BUNDLED_SSL_RUN_DEPENDS_OFF=	ca_root_nss>=0:security/ca_root_nss
 
 NLS_CONFIGURE_ON=	--with-intl=system-icu
-NLS_BUILD_DEPENDS=	icu>=64.2:devel/icu
+NLS_BUILD_DEPENDS=	icu>=67.1:devel/icu
 NLS_LIB_DEPENDS=	libicui18n.so:devel/icu
 
 DTRACE_CONFIGURE_ON=	--with-dtrace
@@ -68,7 +68,7 @@ MAKE_ENV+=	CC.host=${CC} CFLAGS.host="${CFLAGS}" \
 		LINK.host=${CXX} LDFLAGS.host="${LDFLAGS}"
 
 BUILD_DEPENDS+=	c-ares>=1.15.0:dns/c-ares\
-		libuv>=1.34.2:devel/libuv \
+		libuv>=1.37.0:devel/libuv \
 		libnghttp2>=1.40.0:www/libnghttp2 \
 		objdump:devel/binutils
 LIB_DEPENDS+=	libcares.so:dns/c-ares\
