--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,9 +1,9 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox/Makefile 544073 2020-08-03 15:18:49Z tobik $
+# $FreeBSD: head/www/firefox/Makefile 545203 2020-08-18 00:52:34Z jbeich $
 
 PORTNAME=	firefox
-DISTVERSION=	79.0
-PORTREVISION=	3
+DISTVERSION=	80.0
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
@@ -13,8 +13,8 @@ DISTFILES=	${DISTNAME}.source${EXTRACT_SUFX}
 MAINTAINER=	gecko@FreeBSD.org
 COMMENT=	Web browser based on the browser portion of Mozilla
 
-BUILD_DEPENDS=	nspr>=4.25:devel/nspr \
-		nss>=3.54:security/nss \
+BUILD_DEPENDS=	nspr>=4.26:devel/nspr \
+		nss>=3.55:security/nss \
 		icu>=67.1,1:devel/icu \
 		libevent>=2.1.8:devel/libevent \
 		harfbuzz>=2.6.8:print/harfbuzz \
