--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,12 +1,12 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 549873 2020-09-24 00:57:19Z jbeich $
+# $FreeBSD: head/mail/thunderbird/Makefile 549893 2020-09-24 07:29:48Z cmt $
 
 PORTNAME=	thunderbird
 DISTVERSION=	78.3.0
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
+		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build2/source
 DISTFILES=	${DISTNAME}.source${EXTRACT_SUFX}
 
 MAINTAINER=	gecko@FreeBSD.org
