--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,5 +1,5 @@
 # Created by: Maxim Sobolev <sobomax@FreeBSD.org>
-# $FreeBSD: head/security/nss/Makefile 549537 2020-09-22 00:06:38Z jbeich $
+# $FreeBSD: head/security/nss/Makefile 550347 2020-09-27 20:38:43Z linimon $
 
 PORTNAME=	nss
 PORTVERSION=	3.57
@@ -46,8 +46,9 @@ INSTALL_BINS=	certutil cmsutil crlutil derdump makepqg \
 		ssltap strsclnt symkeyutil vfychain vfyserv
 
 OPTIONS_DEFINE=	DEBUG
+OPTIONS_DEFINE_powerpc=		VSX
 OPTIONS_DEFINE_powerpc64=	VSX
-OPTIONS_DEFINE_powerpc=	VSX
+OPTIONS_DEFINE_powerpc64le=	VSX
 
 VSX_CFLAGS=	-DUSE_PPC_CRYPTO
 VSX_DESC=	Use VSX optimized routines (POWER8 or newer)
@@ -61,7 +62,7 @@ BINS=		${DIST}/${OPSYS}${OSREL}_OPT.OBJ
 BINS=		${DIST}/${OPSYS}${OSREL}_DBG.OBJ
 .endif
 
-.if ${ARCH} == powerpc64 || ${ARCH} == powerpc
+.if ${ARCH:Mpowerpc64*} || ${ARCH} == powerpc
 EXTRA_PATCHES=	${FILESDIR}/${ARCH}${PPC_ABI:tl}-lib_freebl_scripts_gen.sh
 USES+=		compiler:c++11-lang # -mcrypto -mvsx
 .if ! ${PORT_OPTIONS:MVSX}
@@ -97,7 +98,7 @@ post-patch:
 		${FIND} . -name "*.c" -o -name "*.h" | \
 		${XARGS} ${REINPLACE_CMD} -e 's|"nspr.h"|<nspr.h>|'
 
-.if ${ARCH} == powerpc64 || ${ARCH} == powerpc
+.if ${ARCH:Mpowerpc*}
 pre-build:
 	@cd ${WRKSRC}/lib/freebl/scripts && ./gen.sh
 .endif
