--- a/www/node/Makefile
+++ b/www/node/Makefile
@@ -1,9 +1,9 @@
-# $FreeBSD: head/www/node/Makefile 553650 2020-10-29 22:25:34Z bhughes $
+# $FreeBSD: head/www/node/Makefile 553940 2020-11-03 00:56:26Z jbeich $
 
 PORTNAME=	node
 DISTVERSIONPREFIX=	v
 DISTVERSION=	15.0.1
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	www
 MASTER_SITES=	http://nodejs.org/dist/v${DISTVERSION}/
 
@@ -32,6 +32,7 @@ OPTIONS_EXCLUDE_aarch64=	DTRACE
 OPTIONS_EXCLUDE_armv6=		DTRACE
 OPTIONS_EXCLUDE_armv7=		DTRACE
 OPTIONS_EXCLUDE_powerpc64=	DTRACE
+OPTIONS_EXCLUDE_powerpc64le=	DTRACE
 
 BUNDLED_SSL_DESC=		Use node.js's bundled OpenSSL implementation
 BUNDLED_SSL_USES_OFF=		ssl
@@ -79,7 +80,7 @@ LIB_DEPENDS+=	libbrotlidec.so:archivers/brotli \
 
 .include <bsd.port.options.mk>
 
-.if defined(PPC_ABI) && ${PPC_ABI} == ELFv2
+.if (defined(PPC_ABI) && ${PPC_ABI} == ELFv2) || ${ARCH} == powerpc64le
 EXTRA_PATCHES=		${PATCHDIR}/extra-patch-common.gypi
 .endif
 
