--- a/www/node14/Makefile
+++ b/www/node14/Makefile
@@ -1,9 +1,9 @@
-# $FreeBSD: head/www/node14/Makefile 553940 2020-11-03 00:56:26Z jbeich $
+# $FreeBSD: head/www/node14/Makefile 554132 2020-11-05 13:57:14Z pkubaj $
 
 PORTNAME=	node
 DISTVERSIONPREFIX=	v
 DISTVERSION=	14.15.0
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	www
 MASTER_SITES=	http://nodejs.org/dist/v${DISTVERSION}/
 PKGNAMESUFFIX=	14
@@ -33,6 +33,7 @@ OPTIONS_EXCLUDE_aarch64=	DTRACE
 OPTIONS_EXCLUDE_armv6=		DTRACE
 OPTIONS_EXCLUDE_armv7=		DTRACE
 OPTIONS_EXCLUDE_powerpc64=	DTRACE
+OPTIONS_EXCLUDE_powerpc64le=	DTRACE
 
 BUNDLED_SSL_DESC=		Use node.js's bundled OpenSSL implementation
 BUNDLED_SSL_USES_OFF=		ssl
@@ -83,7 +84,7 @@ LIB_DEPENDS+=	libbrotlidec.so:archivers/brotli \
 
 .include <bsd.port.options.mk>
 
-.if defined(PPC_ABI) && ${PPC_ABI} == ELFv2
+.if (defined(PPC_ABI) && ${PPC_ABI} == ELFv2) || ${ARCH} == powerpc64le
 EXTRA_PATCHES=		${PATCHDIR}/extra-patch-common.gypi
 .endif
 
