--- a/www/firefox-esr/Makefile
+++ b/www/firefox-esr/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	firefox
-DISTVERSION=	140.1.0
-PORTREVISION=	2
+DISTVERSION=	140.2.0
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	www wayland
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}esr/source \
@@ -10,7 +10,7 @@ DISTFILES=	${DISTNAME}esr.source${EXTRACT_SUFX}
 
 MAINTAINER=	gecko@FreeBSD.org
 COMMENT=	Web browser based on the browser portion of Mozilla
-WWW=		https://www.mozilla.com/firefox
+WWW=		https://www.firefox.com/
 
 BUILD_DEPENDS=	nspr>=4.32:devel/nspr \
 		nss>=3.112:security/nss \
