--- a/security/ca_root_nss/Makefile
+++ b/security/ca_root_nss/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	ca_root_nss
 PORTVERSION=	${VERSION_NSS}
-PORTREVISION=	1
+PORTREVISION=	3
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/nss/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
 DISTNAME=	nss-${VERSION_NSS}${NSS_SUFFIX}
@@ -19,6 +19,8 @@ WRKSRC_SUBDIR=	nss
 
 OPTIONS_DEFINE=		ETCSYMLINK
 OPTIONS_DEFAULT=	ETCSYMLINK
+OPTIONS_EXCLUDE_FreeBSD_15=	ETCSYMLINK
+OPTIONS_EXCLUDE_FreeBSD_16=	ETCSYMLINK
 
 OPTIONS_SUB=		yes
 
@@ -28,12 +30,14 @@ ETCSYMLINK_CONFLICTS_INSTALL=	ca-roots-[0-9]*
 CERTDIR?=	share/certs
 PLIST_SUB+=	CERTDIR=${CERTDIR}
 
-VERSION_NSS=	3.115
+VERSION_NSS=	3.117
 CERTDATA_TXT_PATH=	lib/ckfw/builtins/certdata.txt
 BUNDLE_PROCESSOR=	MAca-bundle.pl
 
-SUB_FILES=	MAca-bundle.pl pkg-message
-SUB_LIST=	VERSION_NSS=${VERSION_NSS}
+CERTCTL_CMD?=	/usr/sbin/certctl
+
+SUB_FILES=	MAca-bundle.pl pkg-deinstall pkg-install pkg-message
+SUB_LIST=	CERTCTL_CMD=${CERTCTL_CMD} VERSION_NSS=${VERSION_NSS}
 
 .include "${.CURDIR}/../../security/ca_root_nss/Makefile.ca"
 
