--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	nss
 PORTREVISION=	1
-DISTVERSION=	3_119_1
+DISTVERSION=	3.120
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
 
